# naviscope

./: .gitignore  .gitmodules  CODING_STYLE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  build.rs  type_system_integration_plan.md
crates/cli/: Cargo.toml
crates/cli/src/: cache.rs  clear.rs  index.rs  lib.rs  main.rs  watch.rs
crates/cli/src/shell/: command.rs  completer.rs  context.rs  handlers.rs  highlighter.rs  mod.rs  view.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: error.rs  lib.rs  logging.rs  model.rs  util.rs
crates/core/src/analysis/: discovery.rs
crates/core/src/asset/: mod.rs  registry.rs  scanner.rs  service.rs
crates/core/src/cache/: mod.rs  stub_cache.rs
crates/core/src/engine/: builder.rs  engine.rs  graph.rs  handle.rs  language_service.rs  mod.rs
crates/core/src/engine/handle/: graph.rs  lifecycle.rs  mod.rs  navigation.rs  semantic.rs
crates/core/src/engine/storage/: converter.rs  mod.rs  model.rs  pool.rs
crates/core/src/facade/: graph.rs  lifecycle.rs  mod.rs  navigation.rs  semantic.rs
crates/core/src/features/: discovery.rs  mod.rs  navigation.rs  query.rs
crates/core/src/indexing/: build.rs  compiler.rs  mod.rs  scanner.rs  stub_planner.rs
crates/core/src/indexing/source/: commit_sink.rs  executor.rs  flow_control.rs  mod.rs  stub_ops.rs
crates/core/src/indexing/source_runtime/: executor.rs  mod.rs
crates/core/src/ingest/: batch_tracker.rs  builder.rs  deferred_queue.rs  executor.rs  metrics.rs  mod.rs  pipeline.rs  scanner.rs  stub_ops.rs  workers.rs
crates/core/src/ingest/parser/: mod.rs  output.rs  utils.rs
crates/core/src/ingest/resolver/: engine.rs  mod.rs  scope.rs  stub.rs
crates/core/src/model/: builder.rs  fqn.rs  graph.rs  metadata.rs  mod.rs  signature.rs  source.rs  types.rs
crates/core/src/model/storage/: converter.rs  mod.rs  model.rs
crates/core/src/parser/: mod.rs  utils.rs
crates/core/src/plugin/: feature.rs  mod.rs
crates/core/src/project/: scanner.rs
crates/core/src/query/: engine.rs  mod.rs  model.rs
crates/core/src/resolver/: engine.rs  mod.rs
crates/core/src/runtime/: ingest_adapter.rs  lifecycle.rs  mod.rs  orchestrator.rs  storage.rs  watch.rs  watcher.rs
crates/core/src/runtime/orchestrator/: indexing.rs  mod.rs  storage.rs  stub_worker.rs  watch.rs
crates/core/src/runtime/plugin/: mod.rs
crates/core/tests/: async_stubbing.rs  engine_api.rs  global_assets.rs  incremental_consistency.rs  indexing.rs  semantic_traits.rs  stub_cache.rs
crates/ingest/: Cargo.toml  README.md
crates/ingest/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ingest/src/runtime/: flow_control.rs  kernel.rs  mod.rs
crates/ingest/tests/: runtime_kernel.rs
crates/lang-gradle/: Cargo.toml  build.rs
crates/lang-gradle/src/: feature.rs  lib.rs  model.rs  parser.rs  resolver.rs
crates/lang-gradle/src/cap/: asset.rs  indexing.rs  matcher.rs  metadata.rs  mod.rs  parse.rs  presentation.rs  registration.rs
crates/lang-gradle/src/discoverer/: cache.rs  mod.rs
crates/lang-gradle/src/queries/: gradle_definitions.rs  gradle_definitions.scm  mod.rs
crates/lang-gradle/src/resolve/: build.rs  mod.rs
crates/lang-java/: Cargo.toml  build.rs
crates/lang-java/src/: feature.rs  jdk.rs  lib.rs  model.rs  naming.rs
crates/lang-java/src/cap/: asset.rs  indexing.rs  matcher.rs  metadata.rs  mod.rs  parse.rs  presentation.rs  registration.rs  runtime.rs
crates/lang-java/src/discoverer/: jdk.rs  mod.rs
crates/lang-java/src/inference/: chain.rs  context.rs  mod.rs
crates/lang-java/src/inference/adapters/: graph.rs  heuristic.rs  mod.rs  noop.rs
crates/lang-java/src/inference/core/: mod.rs  normalization.rs  subtyping.rs  type_system.rs  types.rs  unification.rs
crates/lang-java/src/inference/scope/: builder.rs  manager.rs  mod.rs  table.rs
crates/lang-java/src/inference/strategy/: combinator.rs  field.rs  lambda.rs  literal.rs  local.rs  method.rs  mod.rs  new_expr.rs  this.rs  type_id.rs
crates/lang-java/src/lsp/: mod.rs  references.rs  symbols.rs  type_system.rs
crates/lang-java/src/parser/: index.rs  lsp.rs  mod.rs  naming.rs  scope.rs  types.rs
crates/lang-java/src/parser/ast/: entities.rs  metadata.rs  mod.rs  relations.rs
crates/lang-java/src/queries/: java_definitions.rs  java_definitions.scm  java_occurrences.rs  java_occurrences.scm  mod.rs
crates/lang-java/src/resolve/: context.rs  lang.rs  mod.rs  semantic.rs  types.rs
crates/lang-java/src/resolver/: context.rs  lang.rs  mod.rs  semantic.rs  types.rs
crates/lang-java/src/resolver/scope/: builtin.rs  import_scope.rs  local.rs  member.rs  mod.rs  package_scope.rs
crates/lang-java/tests/: behavior_common.rs  call_hierarchy_behavior.rs  capability_boundary.rs  core_inference_regression.rs  edge_verification.rs  goto_definition_behavior.rs  graph_adapter_regression.rs  implementation_behavior.rs  inference_mock_test.rs  java_integration.rs  logic_goto_def.rs  logic_goto_impl.rs  logic_goto_ref.rs  logic_goto_type.rs  logic_hierarchy.rs  references_behavior.rs  repro_modifiers.rs  test_engine_facade.rs  type_definition_behavior.rs
crates/lang-java/tests/common/: mod.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: capabilities.rs  goto.rs  hierarchy.rs  highlight.rs  hover.rs  indexer.rs  lib.rs  symbols.rs  util.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: http.rs  lib.rs  proxy.rs  stdio.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: asset.rs  codec.rs  converter.rs  graph.rs  interner.rs  lib.rs  metadata_codec.rs  model.rs  naming.rs  plugin.rs  presentation.rs  registration.rs  resolver.rs  type_system.rs  typing.rs  utils.rs
crates/plugin/src/cap/: asset.rs  indexing.rs  matcher.rs  metadata_codec.rs  mod.rs  parse.rs  presentation.rs  runtime.rs
crates/plugin/src/core/: codec.rs  metadata_codec.rs  mod.rs
crates/plugin/src/indexing/: context.rs
docs/: CONCURRENCY_ANALYSIS.md  README.md  REFACTOR_COMPARISON.md  REFACTOR_ENGINE.md  engine_prototype.rs
src/: error.rs  index.rs  lib.rs  logging.rs  main.rs  mcp.rs
tests/: capability_boundary.rs  edge_verification.rs  engine_api.rs  (+6 more)
(+133 files in other folders)
