[package]
name = "naviscope"
version = "0.2.1"
edition = "2024"

[dependencies]
petgraph = { version = "0.8", features = ["serde-1"] }
tree-sitter = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4.25"
rayon = "1.11.0"
notify = "8.2.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
regex = "1.11.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
schemars = "1.2.0"
rmcp = { version = "0.13.0", features = ["macros", "server", "transport-io"] }
tower-lsp = "0.20"
futures = "0.3"
dashmap = "6.1.0"
axum = { version = "0.8.8", features = ["ws"] }
reqwest = { version = "0.13.1", features = ["stream"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
tokio-tungstenite = "0.28.0"
reedline = "0.45.0"
dirs = "6.0.0"
nu-ansi-term = "0.50.3"
shlex = "1.3.0"
tabled = "0.20.0"
rmp-serde = "1.3.1"
once_cell = "1.20"

[build-dependencies]
cc = "1.2"
