[package]
name = "naviscope-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "naviscope"
path = "src/main.rs"

[dependencies]
naviscope-core = { path = "../core" }
naviscope-java = { path = "../lang-java" }
naviscope-gradle = { path = "../lang-gradle" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
reedline = "0.45.0"
dirs = "6.0.0"
nu-ansi-term = "0.50.3"
shlex = "1.3.0"
tabled = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.1.0", features = ["serde"] } 
petgraph = "0.8.3"
naviscope-lsp = { version = "0.1.0", path = "../lsp" }
naviscope-mcp = { version = "0.1.0", path = "../mcp" }
