[package]
name = "naviscope-cli"
version = "0.2.1"
edition = "2024"

[[bin]]
name = "naviscope"
path = "src/main.rs"

[dependencies]
naviscope-lsp = { workspace = true }
naviscope-mcp = { workspace = true }
naviscope-runtime = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reedline = { workspace = true }
dirs = { workspace = true }
nu-ansi-term = { workspace = true }
shlex = { workspace = true }
tabled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
petgraph = { workspace = true }
naviscope-api = { workspace = true }
