[package]
name = "naviscope-core"
version = "0.2.1"
edition = "2024"

[dependencies]
petgraph = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
log = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
notify = { workspace = true }
xxhash-rust = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rmp-serde = { workspace = true }
once_cell = { workspace = true }
lsp-types = { workspace = true }

[build-dependencies]
cc = { workspace = true }
