[package]
name = "naviscope-gradle"
version = "0.1.0"
edition = "2024"

[dependencies]
naviscope-core = { path = "../core" }
tree-sitter = "0.26"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.49.0", features = ["full"] }
petgraph = "0.8"
once_cell = "1.20"

[build-dependencies]
cc = "1.2"
