[package]
name = "naviscope-gradle"
version = "0.2.1"
edition = "2024"

[dependencies]
naviscope-core = { workspace = true }
naviscope-api = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
tree-sitter-groovy = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
once_cell = { workspace = true }
rmp-serde.workspace = true
lasso.workspace = true
