[package]
name = "naviscope-gradle"
version = "0.5.5"
edition = "2024"

[dependencies]
naviscope-core = { workspace = true }
naviscope-api = { workspace = true }
naviscope-plugin = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
tree-sitter-groovy = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
once_cell = { workspace = true }
rmp-serde = { workspace = true }
lasso = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
