[package]
name = "naviscope-java"
version = "0.2.1"
edition = "2024"

[dependencies]
naviscope-core = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
lsp-types = { workspace = true }
smol_str = { workspace = true }
naviscope-api.workspace = true

[build-dependencies]
cc = { workspace = true }
