[package]
name = "naviscope-java"
version = "0.5.5"
edition = "2024"

[dependencies]
naviscope-api = { workspace = true }
naviscope-plugin = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
lsp-types = { workspace = true }
tree-sitter-java = { workspace = true }
rmp-serde = { workspace = true }
lasso = { workspace = true }

[dev-dependencies]
naviscope-core = { workspace = true }
tokio = { workspace = true }
