[package]
name = "naviscope-lsp"
version = "0.2.1"
edition = "2024"

[dependencies]
naviscope-core = { workspace = true }
naviscope-mcp = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tokio-util = { workspace = true }
tree-sitter = { workspace = true }
petgraph = { workspace = true }
