[package]
name = "naviscope-plugin"
version = "0.5.5"
edition = "2024"

[dependencies]
naviscope-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
lsp-types = { workspace = true }
serde_bytes = "0.11.19"
